--- a/src/fxml/FXMLDocument.fxml
+++ b/src/fxml/FXMLDocument.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="448.0" prefWidth="939.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxapplication1.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="448.0" prefWidth="939.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FXMLDocumentController">
    <children>
       <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabMaxWidth="80.0" tabMinWidth="80.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Button fx:id="newTabBtn" layoutY="20.0" mnemonicParsing="false" onAction="#newTabFunction" prefHeight="16.0" prefWidth="23.0" text="+" textAlignment="CENTER" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="4.0">
